[package]
name = "maelstrom-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[[bin]]
name = "maelstrom-node"
path = "src/bin/main.rs"
